some fixes on mobile for the modal

--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -164,6 +164,9 @@
 }
 
 .portfolio-modal {
+  @media screen and (max-width:1023px) {
+    padding-bottom: 2em;
+  }
   .featured {
     @include aspect-ratio(1, 1);
     margin: 0;
@@ -197,9 +200,11 @@
   .project-info {
     flex: 1 1 400px;
     padding: 0 2em 3em;
-    max-height: 350px;
     @media screen and (max-width: 1090px) {
       overflow-y: scroll;
+    }
+    @media screen and (min-width: 1024px) {
+      max-height: 350px;
     }
     .project-name {
       font-family: $title-fonts;
